--- a/Carfinance.Phoenix.Kata.Angular/Carfinance.Phoenix.Kata.Angular.csproj
+++ b/Carfinance.Phoenix.Kata.Angular/Carfinance.Phoenix.Kata.Angular.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Services\Interfaces\IDataService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\list\list-controller.js" />
     <Content Include="app\module.js" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
